--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-<project>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>io.takari</groupId>
@@ -6,7 +6,7 @@
     <version>15</version>
   </parent>
   <artifactId>jbdiff</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.0</version>
   <build>
     <plugins>
       <plugin>
@@ -17,4 +17,8 @@
       </plugin>
    </plugins>
   </build>  
+
+  <scm>
+    <tag>jbdiff-1.0.0</tag>
+  </scm>
 </project>
